# JPLSpatialApplication

./: .gitignore  CMakeLists.txt  LICENSE  README.md
SpatialApplication/: CMakeLists.txt  Dependencies.cmake
SpatialApplication/assets/sound sources/designed/: Small runners opeing hatches 26.flac  Snitch - loop 3D.flac  Spitter - electric shot 2.flac  perfomed spells-11.flac  perfomed spells-19.flac  perfomed spells-27.flac  weird sfx-01.flac  weird sfx-15.flac
SpatialApplication/assets/sound sources/recorded/: 14. Printer, printing 03.flac  thunder-03.flac
SpatialApplication/src/SpatialApplication/: AppEntry.cpp  resources.rc.in
SpatialApplication/src/SpatialApplication/Controller/: AudioPlayer.cpp  AudioPlayer.h
SpatialApplication/src/SpatialApplication/GUI/: AudioPlayerGUI.cpp  AudioPlayerGUI.h  DirectoryDisplay.cpp  DirectoryDisplay.h  LoudnessMeter.cpp  LoudnessMeter.h  RoomView.cpp  RoomView.h  VBAPVisualization.cpp  VBAPVisualization.h  WaveformRendering.cpp  WaveformRendering.h
SpatialApplication/src/SpatialApplication/GUI/Embed/: DefaultImGuiSettings.embed  JPLSpatialApplication-Icon.embed  JPLSpatialApplication-Logo.embed
SpatialApplication/src/SpatialApplication/ImGui/: Colour.h  ImGui.h  ImGuiLayout.h  ImGuiScopedUtils.cpp  ImGuiScopedUtils.h  ImGuiStyling.cpp  ImGuiStyling.h  ImGuiUtils.cpp  ImGuiUtils.h  ImGuiWidgets.cpp  ImGuiWidgets.h  JPLImGuiFileDialogConfig.h
SpatialApplication/src/SpatialApplication/Layers/: AudioPlaybackLayer.cpp  AudioPlaybackLayer.h  RoomLayer.cpp  RoomLayer.h
SpatialApplication/src/SpatialApplication/Model/: DirectSoundModel.cpp  DirectSoundModel.h  RoomModel.h  VBAPModel.cpp  VBAPModel.h  VBAPVisualizationModel.h
SpatialApplication/src/SpatialApplication/Processing/: Effect.cpp  Effect.h  Panner.cpp  Panner.h  RMSMeter.cpp  RMSMeter.h
SpatialApplication/src/SpatialApplication/Systems/: ERTracing.cpp  ERTracing.h
SpatialApplication/src/SpatialApplication/Utility/: MVCUtils.h  PerformanceMetering.h  Timer.h
cmake/: CPM.cmake  InterProcessOptimization.cmake
